# BookFlavor

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  build.sh  git命令学习.sh  ld.so.cache_bak  vcpkg.json  vcpkgadd.json  vcpkgadd.txt  阿里巴巴发送短信
Config/: common-config.cfg
Resource/i18n/translate/: fr.res  fr.txt  root.res  root.txt
Source/BackEnd/: CMakeLists.txt
Source/BackEnd/Cmd/: root.cpp
Source/BackEnd/Cmd/Init/: systemsignal.cpp  systemsignal.h
Source/BackEnd/Email/: emailService.cpp  emailService.h  server.cpp  server.h
Source/BackEnd/Media/: BasicTaskScheduler.cpp  BasicTaskScheduler.h  RtspServer.cpp  Server.cpp  Server.h  TaskScheduler.h
Source/BackEnd/User/: createUser.cpp  deleteUser.cpp  listUsers.cpp  login.cpp  server.cpp  server.h  updateUser.cpp  userRegisterToPb.h
Source/BackEnd/User/db/: userSQLdb.h  userSQLdbExtra.h  userService.sql
Source/Proto/Email/: emailService.h  emailServicePb.h
Source/Proto/Media/: mediaServicePb.h
Source/Proto/User/: user.h  userService.h  userServicePb.h
Source/Test/: CMakeLists.txt  test.cpp
Source/Tool/MobileCodeSearchRedisDatabaseCreate/: CMakeLists.txt  build.sh  buildredis.cpp  vcpkg.json
Source/Util/: CMakeLists.txt  Email.h  Logfield.h  Password.h  PhoneNumberErrorCode.h  RuntimeError.cpp  RuntimeError.h  Uri.h  email.h  password.h  uri.h
Source/Util/Encode/: opensslalgorithm.cpp  opensslalgorithm.h  skey.h
Source/Util/FilterParser/: filter.g4  filterBaseListener.cpp  filterBaseListener.h  filterLexer.cpp  filterLexer.h  filterListener.cpp  filterListener.h  filterParser.cpp  filterParser.h  userfunction.h
Source/Util/FilterParser/.antlr/: filter.interp  filterLexer.interp  filterLexer.java  filterLexer.tokens  filterParser.java
Source/Util/PhoneNumber/: PhoneNumberParse.h
Source/Util/ResourecIDName/: user.h
Source/Util/STL/: SmallVector.h
Source/Util/Time/: ICUtime.cpp  ICUtime.h
install/: aptinstall.sh  environmentvariable.sh  removelfs.sh  vcpkginstall.sh
run/: Readme.md  run_backend.sh
vcpkgjson/: vcpkg.json
